--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,13 +1,9 @@
-# requirements.txt
 fastapi==0.104.1
 uvicorn==0.24.0
 aiohttp==3.9.1
 beautifulsoup4==4.12.2
 lxml==4.9.3
-playwright==1.40.0
-redis==5.0.1
 pydantic==2.5.0
-python-multipart==0.0.6
 requests==2.31.0
-fake-useragent==1.4.0
-asyncio-throttle==1.0.2
+ollama==0.1.7
+html5lib==1.1
